--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Hogwarts</title>
 </head>
 <body>
-    <button class="btn btn-lg btn-info">Greatest Button Ever</button>
+    <div id="nav-container"></div>
+    
 </body>
 </html>
